--- a/app-ui/src/app/assigment/assigment.component.html
+++ b/app-ui/src/app/assigment/assigment.component.html
@@ -1,1 +1,37 @@
-<p>assigment works!</p>
+
+<div class="container-fluid">
+
+  <div class="row main justify-content-center">
+    <div class="col-10">
+
+      <h1>Assigments</h1>
+
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>
+              Name
+            </th>
+            <th>
+              Email
+            </th>
+            <th>
+              Copy Email
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let assigment of apiResponse._embedded.assigments">
+            <td>{{assigment.name}}</td>
+            <td>{{assigment.email}}</td>
+            <td>{{assigment.copyEmail}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+  </div>
+</div>
+
+
