fix assignment typo

--- a/app-ui/src/app/app.component.html
+++ b/app-ui/src/app/app.component.html
@@ -23,8 +23,16 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="assignments">Assignments</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="homework">Homework</a>
+        </li>
+
+        <!--
         <li class="nav-item active">
-          <a class="nav-link" routerLink="assigments" routerLinkActive="active">Assigments <span class="sr-only">(current)</span></a>
+          <a class="nav-link" routerLink="assignments">Assignments <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -43,11 +51,14 @@
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
+-->
       </ul>
+<!--
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
+-->
     </div>
   </nav>
 
