--- a/app-ui/src/app/app.component.html
+++ b/app-ui/src/app/app.component.html
@@ -23,13 +23,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="assignments">Assignments</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="homework">Homework</a>
-        </li>
 
+        <li *ngFor="let option of menuOptions" [attr.class]="option.cssClasses" [attr.id]="option.id">
+          <a class="nav-link" routerLink="{{option.route}}">{{option.value}}</a>
+        </li>
         <!--
         <li class="nav-item active">
           <a class="nav-link" routerLink="assignments">Assignments <span class="sr-only">(current)</span></a>
