--- a/app-ui/src/app/assignment/assignment.component.html
+++ b/app-ui/src/app/assignment/assignment.component.html
@@ -6,7 +6,7 @@
 
       <h1>Assignments</h1>
 
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" (click)="displayAddModal(true)">
         Add Assignment
       </button>
 
@@ -38,21 +38,43 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="addModalLabel" [attr.aria-hidden]="hideAddModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="addModalLabel">Add Assignment</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <form [formGroup]="form" >
+
+          <fieldset>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Assignment name" formControlName="name">
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <textarea class="form-control" id="description" rows="3" formControlName="description"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" placeholder="Assignment email" formControlName="email">
+            </div>
+            <div class="form-group">
+              <label for="copy-email">Copy Email</label>
+              <input type="email" class="form-control" id="copy-email" placeholder="Copy Email" formControlName="copyEmail">
+            </div>
+
+          </fieldset>
+        </form>
+
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="displayAddModal(false)">Close</button>
+        <button type="submit" class="btn btn-primary" (click)="addAssignment()">Save changes</button>
       </div>
     </div>
   </div>
