--- a/app-ui/src/app/assignment/assignment.component.html
+++ b/app-ui/src/app/assignment/assignment.component.html
@@ -25,9 +25,10 @@
             <td>{{assignment.email}}</td>
             <td>{{assignment.copyEmail}}</td>
             <td>
-              <a class="btn btn-primary"><i class="fa fa-pencil" ></i></a>&nbsp;
+              <a class="btn btn-info"><i class="fa fa-eye" ></i></a>&nbsp;
+              <a class="btn btn-primary" href="#" [routerLink]="['/assignments', assignment.id]"><i class="fa fa-pencil" ></i></a>&nbsp;
               <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
-                (click)="confirmDelete(assignment.name, assignment._links['self'].href)">
+                (click)="confirmDelete(assignment.name, assignment.id)">
                 <i class="fa fa-trash" ></i>
               </button>
             </td>
@@ -120,7 +121,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" (click)="deleteAssignment(this.deleteUrl)">Delete</button>
+        <button type="button" class="btn btn-danger" (click)="deleteAssignment(this.deleteId)">Delete</button>
       </div>
     </div>
   </div>
