--- a/app-ui/src/app/assignment/assignment.component.html
+++ b/app-ui/src/app/assignment/assignment.component.html
@@ -25,8 +25,12 @@
             <td>{{assignment.email}}</td>
             <td>{{assignment.copyEmail}}</td>
             <td>
-              <a class="btn btn-info"><i class="fa fa-eye" ></i></a>&nbsp;
-              <a class="btn btn-primary" href="#" [routerLink]="['/assignments', assignment.id]"><i class="fa fa-pencil" ></i></a>&nbsp;
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#viewModal" (click)="viewAssignment(i)">
+                <i class="fa fa-eye"></i>
+              </button>
+              &nbsp;
+              <a class="btn btn-primary" href="#" [routerLink]="['/assignments', assignment.id]"><i class="fa fa-pencil" ></i></a>
+              &nbsp;
               <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
                 (click)="confirmDelete(assignment.name, assignment.id, i)">
                 <i class="fa fa-trash" ></i>
@@ -122,6 +126,47 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="deleteAssignment(this.deleteId, this.deleteIndex)">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- View modal -->
+<div class="modal fade" id="viewModal" tabindex="-1" role="dialog" aria-labelledby="viewModalLabel" aria-hidden="true" *ngIf="assignment != null">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="viewModalLabel">View Assignment</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <table class="table table-striped table-borderless">
+          <tr>
+            <th>Id</th>
+            <td>{{assignment.id}}</td>
+          </tr>
+          <tr>
+            <th>Name</th>
+            <td>{{assignment.name}}</td>
+          </tr>
+          <tr>
+            <th>Description</th>
+            <td><p>{{assignment.description}}</p></td>
+          </tr>
+          <tr>
+            <th>Email</th>
+            <td>{{assignment.email}}</td>
+          </tr>
+          <tr>
+            <th>Copy Email</th>
+            <td>{{assignment.copyEmail}}</td>
+          </tr>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
