--- a/app-ui/src/app/assignment/assignment.component.html
+++ b/app-ui/src/app/assignment/assignment.component.html
@@ -6,9 +6,19 @@
 
       <h1>Assignments</h1>
 
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" (click)="this.buildAddForm()">
         Add Assignment
       </button>
+      &nbsp;
+      <button type="button" class="btn btn-info" (click)="reloadData()">
+        Reload data
+      </button>
+
+      <div *ngIf="globalErrors != null && globalErrors.length > 0" class="main">
+        <div class="alert alert-danger" role="alert" *ngFor="let error of globalErrors">
+          {{error}}
+        </div>
+      </div>
 
       <table class="table table-striped table-main">
         <thead>
