--- a/app-ui/src/app/assignment/update-assignment/update-assignment.component.html
+++ b/app-ui/src/app/assignment/update-assignment/update-assignment.component.html
@@ -5,6 +5,8 @@
 
       <h1>Assignments</h1>
 
+      <app-api-error [responseError]="apiError"></app-api-error>
+
       <form [formGroup]="form" (ngSubmit)="updateAssignment()">
 
         <fieldset>
