--- a/app-ui/src/app/assignment/assignment.component.html
+++ b/app-ui/src/app/assignment/assignment.component.html
@@ -34,10 +34,10 @@
                 <i class="fa fa-eye"></i>
               </button>
               &nbsp;
-              <a class="btn btn-primary" href="#" [routerLink]="['/assignments', assignment.id]"><i class="fa fa-pencil" ></i></a>
+              <a class="btn btn-primary" href="#" [routerLink]="['/assignments', assignment.pk]"><i class="fa fa-pencil" ></i></a>
               &nbsp;
               <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteModal"
-                (click)="confirmDelete(assignment.name, assignment.id, i)">
+                (click)="confirmDelete(assignment.name, assignment.pk, i)">
                 <i class="fa fa-trash" ></i>
               </button>
             </td>
@@ -150,7 +150,7 @@
         <table class="table table-striped table-borderless">
           <tr>
             <th>Id</th>
-            <td>{{assignment.id}}</td>
+            <td>{{assignment.pk}}</td>
           </tr>
           <tr>
             <th>Name</th>
